--- a/app.json
+++ b/app.json
@@ -1,13 +1,13 @@
 {
   "expo": {
-    "name": "wawa-eats",
-    "slug": "wawa-eats",
+    "name": "kawasaki",
+    "slug": "kawasaki",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/kawasaki-icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -19,7 +19,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/kawasaki-icon.png",
         "backgroundColor": "#ffffff"
       }
     },
